examples/tf/aws_internet_gateway/aws_internet_gateway_3.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"

  tags = {
    Name = "main"
  }
}
